<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/TripsActivity"
    tools:context=".TripsActivity">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="20dp">
            <TextView
                android:id="@+id/txtHello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helloName"
                android:textColor="@color/black"
                android:textSize="25sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trips"
                android:textColor="@color/black"
                android:textSize="25sp"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <TableLayout
                    android:id="@+id/tableTrips"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="Маршрут"
                            android:textSize="15sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="Начальная остановка"
                            android:layout_marginHorizontal="6dp"
                            android:textSize="15sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right"
                            android:text="Время"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </TableRow>
                </TableLayout>
            </ScrollView>
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">
            <Button
                android:id="@+id/btnTrDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Done"/>
    </LinearLayout>
</RelativeLayout>